[#112] Add /stats page
