# test/fixtures/api/swagger.yaml
@@ -248,24 +248,92 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
 
-  /locations:
-    x-swagger-router-controller: locations
+  /stats:
+    x-swagger-router-controller: stats
     get:
       tags:
-        - locations
-      description: Returns list of locations
-      operationId: list
+        - statistics
+      description: Returns statistics
+      operationId: get
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/LocationList"
+            $ref: "#/definitions/Stats"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
 
 definitions:
+  Stats:
+    type: object
+    properties:
+      trialsCount:
+        type: integer
+        description: Trials count
+      trialsPerSource:
+        type: array
+        items:
+          $ref: '#/definitions/TrialsPerSource'
+      trialsPerYear:
+        type: array
+        items:
+          $ref: '#/definitions/TrialsPerYear'
+      topLocations:
+        type: array
+        items:
+          $ref: '#/definitions/TopLocations'
+      sourcesLatestUpdatedDate:
+        type: array
+        items:
+          $ref: '#/definitions/SourcesLatestUpdatedDate'
+
+  TrialsPerSource:
+    type: object
+    properties:
+      id:
+        type: string
+        description: Source's ID
+      name:
+        type: string
+        description: Source's name
+      count:
+        type: integer
+        description: Number of trials in this source
+
+  TrialsPerYear:
+    type: object
+    properties:
+      year:
+        type: integer
+      count:
+        type: integer
+        description: Number of trials in this year
+
+  TopLocations:
+    type: object
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      count:
+        type: integer
+        description: Number of trials in this location
+
+  SourcesLatestUpdatedDate:
+    type: object
+    description: Source with information on when it was last updated
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      latest_updated_date:
+        type: string
+        description: Date this source was last updated
+
   Trial:
     required:
       - id
@@ -553,11 +621,6 @@ definitions:
         type: string
       name:
         type: string
-
-  LocationList:
-    type: array
-    items:
-      $ref: '#/definitions/Location'
 
   ErrorResponse:
     required:
